--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -18,6 +18,11 @@ jobs:
         with:
           images: |
             tailordevdockermachine/podPeeper
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
       
       - name: Build and without push Docker image
         uses: docker/build-push-action@v4
