--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,24 +12,21 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
-      
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4
         with:
           images: |
             tailordevdockermachine/podPeeper
-      
       - name: Build and push Docker images
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: tailordevdockermachine/podpeeper:${{ github.sha }}, tailordevdockermachine/podpeeper:latest
           labels: ${{ steps.meta.outputs.labels }}
